Fixed size of Footer on mobiles. Testing ws reconnections

--- a/src/components/UI/Footer/Footer.module.css
+++ b/src/components/UI/Footer/Footer.module.css
@@ -4,7 +4,7 @@
 	right: 0;
 	left: 0;
 	height: fit-content();
-	max-height: 50%;
+	max-height: 60%;
 	padding: 20px;
 	background: white;
 	display: flex;
